Add GoogleTrend feature and separate pages

--- a/app/templates/buisnesstype.html
+++ b/app/templates/buisnesstype.html
@@ -10,7 +10,7 @@
   <body>
     <nav class="navbar navbar-dark bg-primary mb-2">
 	  <a href="/index" class="navbar-brand">
-        <img src="../static/eye.png" width="30" height="30" alt="">
+        <img src="../static/eye.png" width="30" height="30" class="d-inline-block align-top" alt="">
         Financial Eye 360
       </a>
 	  <form action="/search" method="GET" class="form-inline">
