Add typeahead feature

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 	<link rel="shortcut icon" href="../static/favicon.ico">
+	<link rel="stylesheet" href="../static/css/search.css">
 	<title>Financial Eye 360</title>
   </head>
   <body>
@@ -30,12 +31,12 @@
         <div class="col-sm">
         <form action="/search" method="GET">
           <div class="form-group align-items-center">
-              <div class="input-group">
-              <input type="text" class="form-control mb-2" name="code" id="text5a" placeholder="銘柄コード">
+              <div class="input-group" id="bloodhound">
+				<input type="text" class="typeahead tt-input form-control " name="code" id="text10" placeholder="銘柄コード or 会社名を入力" style="position: relative; vertical-align: top; background-color: transparent;">
                 <div class="input-group-append">
-              <button type="submit" class="btn btn-primary mb-2">検索</button>
+                  <button type="submit" class="btn btn-primary ">検索</button>
                 </div>
-        	</div>
+        	  </div>
           </div>
         </form>
 	    </div>
@@ -136,6 +137,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-	
+	<script src="../static/js/typeahead.js"></script>
+	<script src="../static/js/search.js"></script>
   </body>
 </html>
