--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,30 +19,25 @@
     </nav>
 
     <div class="container-fluid">
-      <div class="row align-items-center">
+      <div class="row justify-content-center align-items-center">
+	    <div class="col-12"> &nbsp </div>
+		<div class="col-12"> &nbsp </div>
+        <div class="col-12"><h1 class="text-center">Financial Eye 360</h1></div>
         <div class="col-12"> &nbsp </div>
         <div class="col-12"> &nbsp </div>
-        <div class="col-sm"></div>
-        <div class="col-sm"><h1 class="text-center">Financial Eye 360</h1></div>
-        <div class="col-sm"></div>
-        <div class="col-12"> &nbsp </div>
-        <div class="col-12"> &nbsp </div>
-        <div class="col-sm"></div>
-        <div class="col-sm">
         <form action="/search" method="GET">
-          <div class="form-group align-items-center">
-              <div class="input-group" id="bloodhound">
-				<input type="text" class="typeahead tt-input form-control " name="code" id="text10" placeholder="銘柄コード or 会社名を入力" style="position: relative; vertical-align: top; background-color: transparent;">
-                <div class="input-group-append">
-                  <button type="submit" class="btn btn-primary ">検索</button>
-                </div>
-        	  </div>
+          <div class="form-group">
+              <div class="input-group " id="bloodhound">
+				<input type="text" class="typeahead tt-input form-control" placeholder="銘柄コード or 会社名を入力" style="background-color: transparent;">
+			  <div class="input-group-append">
+			  <button type="submit" class="btn btn-primary">検索</button>
+			  </div>
+			  </div>
           </div>
         </form>
-	    </div>
-		<div class="col-sm"></div>
 		<div class="col-12"> &nbsp </div>
-        </div>
+		<div class="col-12"> &nbsp </div>
+      </div>
 		
 		<div class="row">
 		<div class="col-3"> &nbsp </div>
