--- a/app/templates/stock.html
+++ b/app/templates/stock.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/css/bsadmin.css">
 	<link rel="shortcut icon" href="../static/favicon.ico">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
-	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+	<script src="../static/js/echarts.min.js"></script>
 	<title>Financial Eye 360 - {{code}}</title>
   </head>
   <body>
@@ -64,19 +63,7 @@
 	
     <div class="row">
 	  <div class="col-md-12">
-        <div id="chart">
-		<div id="candlestick"></div>
-		</div>
-	  </div>
-	  <div class="col-md-12">
-        <div id="chart">
-		<div id="volume"></div>
-		</div>
-	  </div>
-	  <div class="col-md-12">
-        <div id="chart">
-		<div id="filter"></div>
-		</div>
+        <div id="stock" style="width: 100%;height:600px;"></div>
 	  </div>
     </div>
 
@@ -84,82 +71,249 @@
 </div> <!-- sidebar -->
 
 <script type="text/javascript">
-google.charts.load('current', {'packages':['corechart', 'controls']});
-var chart_div = document.getElementById('chart');
+var myChart = echarts.init(document.getElementById('stock'));
+var upColor = '#00da3c';
+var downColor = '#ec0000';
 
-function drawChart() {
-   var data = new google.visualization.DataTable();
-   data.addColumn('datetime', 'Date');
-   data.addColumn('number', 'Open');
-   data.addColumn('number', 'High');
-   data.addColumn('number', 'Low');
-   data.addColumn('number', 'Close');
-   data.addColumn('number', 'Volume');
-   let d=JSON.parse('{{all_stocks|tojson}}');
-   d.forEach(function (di) {
-           data.addRow([{ v: new Date(di.date), f: di.date }, di.open, 
-                          di.high, di.low, di.close, di.volume]);
-   });
-	
-   var dashboard = new google.visualization.Dashboard(chart_div);
-   var control = new google.visualization.ControlWrapper({
-       controlType: 'ChartRangeFilter',
-       containerId: 'filter',
-       options: {
-           filterColumnIndex: 0,
-           ui: {
-               chartType: 'LineChart',
-               chartOptions: {
-                   chartArea: {
-                       height: '80%', width: '100%', 
-                       backgroundColor: { stroke: "gray", strokeWidth: 1 }
-                   },
-                   hAxis: { baselineColor: 'none' }
-               },
-               chartView: { columns: [0, 4] }
-           }
-       }
-   });
+function splitData(rawData) {
+    var categoryData = [];
+    var values = [];
+    var volumes = [];
+    for (var i = 0; i < rawData.length; i++) {
+		categoryData.push(rawData[i].date);
+		values.push([rawData[i]['open'],rawData[i]['close'],rawData[i]['high'],rawData[i]['low'],rawData[i]['volume'],]);
+		volumes.push([i, rawData[i]['volume'], rawData[i]['open'] > rawData[i]['close'] ? 1 : -1]);
+    }
 
-   var chart = new google.visualization.ChartWrapper({
-       chartType: 'CandlestickChart',
-       containerId: 'candlestick',
-       options: {
-           chartArea: { height: '80%', width: '100%',  
-                        backgroundColor: { stroke: "gray", strokeWidth: 1 } },
-           hAxis: { type: 'category', slantedText: false, maxTextLines: 1, 
-                    maxAlternation: 1 },
-           legend: { position: 'none' },
-           candlestick: {
-               fallingColor: { strokeWidth: 0, fill: '#a52714' },
-               risingColor: { strokeWidth: 0, fill: '#0f9d58' }
-           },
-           title: "株価:"
-       },
-       view: { columns: [0, 3, 1, 4, 2] }
-   });
-
-   var volume = new google.visualization.ChartWrapper({
-       chartType: 'ColumnChart',
-       containerId: 'volume',
-       options: {
-           chartArea: { height: '80%', width: '100%', top: 40, bottom: 30, 
-                        backgroundColor: { stroke: "gray", strokeWidth: 1 } },
-           hAxis: { type: 'category', slantedText: false, maxTextLines: 1, 
-                    maxAlternation: 1 },
-           legend: { position: 'none' },
-           title: "出来高:"
-       },
-       view: { columns: [0, 5] }
-   });
-
-   dashboard.bind(control, [chart, volume]);
-   dashboard.draw(data);
+    return {
+        categoryData: categoryData,
+        values: values,
+        volumes: volumes
+    };
 }
-google.charts.setOnLoadCallback(drawChart);
+
+function calculateMA(dayCount, data) {
+    var result = [];
+    for (var i = 0, len = data.values.length; i < len; i++) {
+        if (i < dayCount) {
+            result.push('-');
+            continue;
+        }
+        var sum = 0;
+        for (var j = 0; j < dayCount; j++) {
+            sum += data.values[i - j][1];
+        }
+        result.push(+(sum / dayCount).toFixed(3));
+    }
+    return result;
+}
+
+var rawData=JSON.parse('{{all_stocks|tojson}}');
+var data = splitData(rawData);
+
+myChart.setOption(option = {
+    backgroundColor: '#fff',
+    animation: false,
+    legend: {
+        bottom: 10,
+        left: 'center',
+        data: ['株価', 'MA25', 'MA75']
+    },
+    tooltip: {
+        trigger: 'axis',
+        axisPointer: {
+            type: 'cross'
+        },
+        backgroundColor: 'rgba(245, 245, 245, 0.8)',
+        borderWidth: 1,
+        borderColor: '#ccc',
+        padding: 10,
+        textStyle: {
+            color: '#000'
+        },
+        position: function (pos, params, el, elRect, size) {
+            var obj = {top: 10};
+            obj[['left', 'right'][+(pos[0] < size.viewSize[0] / 2)]] = 30;
+            return obj;
+        }
+        // extraCssText: 'width: 170px'
+    },
+    axisPointer: {
+        link: {xAxisIndex: 'all'},
+        label: {
+            backgroundColor: '#777'
+        }
+    },
+    toolbox: {
+        feature: {
+            dataZoom: {
+                yAxisIndex: false
+            },
+            brush: {
+                type: ['lineX', 'clear']
+            }
+        }
+    },
+    brush: {
+        xAxisIndex: 'all',
+        brushLink: 'all',
+        outOfBrush: {
+            colorAlpha: 0.1
+        }
+    },
+    visualMap: {
+        show: false,
+        seriesIndex: 5,
+        dimension: 2,
+        pieces: [{
+            value: 1,
+            color: downColor
+        }, {
+            value: -1,
+            color: upColor
+        }]
+    },
+    grid: [
+        {
+            left: '10%',
+            right: '8%',
+            height: '50%'
+        },
+        {
+            left: '10%',
+            right: '8%',
+            top: '63%',
+            height: '16%'
+        }
+    ],
+    xAxis: [
+        {
+            type: 'category',
+            data: data.categoryData,
+            scale: true,
+            boundaryGap: false,
+            axisLine: {onZero: false},
+            splitLine: {show: false},
+            splitNumber: 20,
+            min: 'dataMin',
+            max: 'dataMax',
+            axisPointer: {
+                z: 100
+            }
+        },
+        {
+            type: 'category',
+            gridIndex: 1,
+            data: data.categoryData,
+            scale: true,
+            boundaryGap: false,
+            axisLine: {onZero: false},
+            axisTick: {show: false},
+            splitLine: {show: false},
+            axisLabel: {show: false},
+            splitNumber: 20,
+            min: 'dataMin',
+            max: 'dataMax'
+        }
+    ],
+    yAxis: [
+        {
+            scale: true,
+            splitArea: {
+                show: true
+            }
+        },
+        {
+            scale: true,
+            gridIndex: 1,
+            splitNumber: 2,
+            axisLabel: {show: false},
+            axisLine: {show: false},
+            axisTick: {show: false},
+            splitLine: {show: false}
+        }
+    ],
+    dataZoom: [
+        {
+            type: 'inside',
+            xAxisIndex: [0, 1],
+            start: 98,
+            end: 100
+        },
+        {
+            show: true,
+            xAxisIndex: [0, 1],
+            type: 'slider',
+            top: '85%',
+            start: 98,
+            end: 100
+        }
+    ],
+    series: [
+        {
+            name: '株価',
+            type: 'candlestick',
+            data: data.values,
+            itemStyle: {
+                color: upColor,
+                color0: downColor,
+                borderColor: null,
+                borderColor0: null
+            },
+            tooltip: {
+                formatter: function (param) {
+                    param = param[0];
+                    return [
+                        'Date: ' + param.name + '<hr size=1 style="margin: 3px 0">',
+                        'Open: ' + param.data[0] + '<br/>',
+                        'Close: ' + param.data[1] + '<br/>',
+                        'Lowest: ' + param.data[2] + '<br/>',
+                        'Highest: ' + param.data[3] + '<br/>'
+                    ].join('');
+                }
+            }
+        },
+        {
+            name: 'MA25',
+            type: 'line',
+            data: calculateMA(25, data),
+            smooth: true,
+            lineStyle: {
+                opacity: 0.5
+            }
+        },
+        {
+            name: 'MA75',
+            type: 'line',
+            data: calculateMA(75, data),
+            smooth: true,
+            lineStyle: {
+                opacity: 0.5
+            }
+        },
+        {
+            name: 'Volume',
+            type: 'bar',
+            xAxisIndex: 1,
+            yAxisIndex: 1,
+            data: data.volumes
+        }
+    ]
+}, true);
+
+myChart.dispatchAction({
+    type: 'brush',
+    areas: [
+        {
+            brushType: 'lineX',
+            coordRange: ['2020-06-10', '2020-07-10'],
+            xAxisIndex: 0
+        }
+    ]
+});
 </script>
 
-	<script src="https://riversun.github.io/chatux/chatux.min.js"></script>
+<script src="https://riversun.github.io/chatux/chatux.min.js"></script>
 	<script>
 		const chatux = new ChatUx();
 	
