fix parameter for code

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,7 +28,7 @@
         <form action="/search" method="GET">
           <div class="form-group">
               <div class="input-group " id="bloodhound">
-				<input type="text" class="typeahead tt-input form-control" placeholder="銘柄コード or 会社名を入力" style="background-color: transparent;">
+				<input type="text" class="typeahead tt-input form-control" name="code" placeholder="銘柄コード or 会社名を入力" style="background-color: transparent;">
 			  <div class="input-group-append">
 			  <button type="submit" class="btn btn-primary">検索</button>
 			  </div>
